Fix mobile menu body overflow problem

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,10 +51,8 @@ h4 {
   }
 }
 
-@screen xl {
-  h1 {
-    @apply text-6xl;
-  }
+body.no-scroll {
+  @apply overflow-hidden
 }
 
 @tailwind components;
